--- a/source/layouts/site_page.erb
+++ b/source/layouts/site_page.erb
@@ -1,3 +1,7 @@
+<% content_for :critical_path_css do %>
+<%= partial 'partials/critical_path_blog_css' %>
+<% end %>
+
 <% wrap_layout :layout do %>
 <%= partial 'partials/header' %>
 <div class="container" id="main">
