minor style fix to remove rounded corners from code blocks

--- a/source/stylesheets/site.scss
+++ b/source/stylesheets/site.scss
@@ -313,6 +313,10 @@ figure.code-highlight-figure {
   }
 }
 
+figure.code-highlight-figure pre.highlight {
+  border-radius: 0;
+}
+
 .social-navbar {
   font-size: 36px;
   vertical-align: middle;
