--- a/source/visualizations/2013-10-01-cme-product-sectors.html.erb
+++ b/source/visualizations/2013-10-01-cme-product-sectors.html.erb
@@ -24,7 +24,7 @@ visualization: true
     </div>
     <div class="row">
       <div class="col-sm-12">
-        <div id="cme-product-sectors-visualization"></div>
+        <div class="cme-product-sectors-visualization"></div>
       </div>
     </div>
   </div>
