--- a/source/categories.html.erb
+++ b/source/categories.html.erb
@@ -10,7 +10,7 @@ layout: site_page
 
 <div class="row">
   <div class="col-sm-12">
-    <ul id="categories">
+    <ul class="categories-list">
       <% blog.tags.sort.each do |tag, articles| %>
       <li><%= link_to "#{tag} (#{articles.size})", tag_path(tag) %></li>
       <% end %>
