--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -1,5 +1,5 @@
 <%= partial 'partials/navbar' %>
-<div id="misapplied-jumbotron" class="jumbotron">
+<div class="jumbotron misapplied-jumbotron">
   <div class="container">
     <%= data.site.title %>
     <h3 class="tagline"><%= data.site.subtitle %></h3>
