--- a/source/stylesheets/_flat-ui-custom.scss
+++ b/source/stylesheets/_flat-ui-custom.scss
@@ -1,159 +1,232 @@
-@import "vendor/bootstrap/bootstrap_custom";
-@import "vendor/font-awesome/font-awesome";
-@import "vendor/Flat-UI/flat-ui";
+@import 'vendor/bootstrap/bootstrap_custom';
+@import 'vendor/font-awesome/font-awesome';
+@import 'vendor/Flat-UI/flat-ui';
 
-@import "vendor/bootstrap/bootstrap/variables";
-@import "variables";
+@import 'vendor/bootstrap/bootstrap/variables';
+@import 'variables';
 
 .btn {
   background: $bg-color;
+
+  &.btn-primary {
+    background-color: $tertiary-color;
+  }
+
+  &.btn-info {
+    background-color: $secondary-color;
+  }
 }
 
-.btn.btn-primary {
-  background-color: $tertiary-color;
+.fui-bubble {
+  &::before {
+    color: $secondary-color;
+  }
 }
 
-.btn.btn-info {
-  background-color: $secondary-color;
-}
-
-.fui-bubble:before {
-  color: $secondary-color;
-}
-
-.demo-text-box a:hover {
-  color: $tertiary-color;
+.demo-text-box {
+  a {
+    &:hover {
+      color: $tertiary-color;
+    }
+  }
 }
 
 .demo-browser-content {
   background-color: $bg-color;
 }
 
-.navbar .brand {
-  color: $tertiary-color;
+.navbar {
+  .brand {
+    color: $tertiary-color;
+  }
+
+  .nav {
+    & > li {
+
+      &:hover {
+        & > ul {
+          top: 100%;
+        }
+      }
+
+      & > ul {
+        &::before {
+          border-color: transparent transparent $bg-color;
+        }
+      }
+
+      & > a {
+        border-radius: 5px;
+        padding: 15px 15px 17px;
+
+        &:hover {
+          color: $tertiary-color;
+        }
+      }
+    }
+
+    ul {
+      li {
+        background-color: $bg-color;
+
+        &.active {
+          & > a {
+            background-color: $tertiary-color;
+
+            &:hover {
+              background-color: $tertiary-color;
+            }
+          }
+        }
+      }
+
+      a {
+        &:hover {
+          background-color: $tertiary-color;
+        }
+      }
+    }
+  }
 }
 
-.navbar .nav > li > ul:before {
-  border-color: transparent transparent $bg-color transparent;
+.navbar-inverse {
+  .navbar-inner {
+    background: $navbar-color;
+  }
+
+  .nav {
+    & > li {
+      & > a {
+        background-color: $button-background-color;
+        color: $button-text-color;
+
+        &:focus,
+        &:hover {
+          background-color: $button-active-background-color;
+          color: $button-active-text-color;
+        }
+      }
+    }
+
+    .active {
+      & > a {
+        background-color: $button-background-color;
+        color: $button-text-color;
+
+        &:focus,
+        &:hover {
+          background-color: $button-active-background-color;
+          color: $button-active-text-color;
+        }
+      }
+    }
+  }
+
+  .navbar-toggle {
+    background-color: $button-active-background-color;
+    color: $button-active-text-color;
+    padding-top: 0;
+
+    &:focus,
+    &:hover {
+      color: $button-active-text-color;
+
+      &::before {
+        color: $button-active-text-color;
+      }
+    }
+
+    &::before {
+      color: $button-active-text-color;
+    }
+  }
+
+  .dropdown-menu {
+    a {
+      &:focus,
+      &:hover {
+        background-color: $button-active-background-color;
+        color: $button-active-text-color;
+      }
+    }
+  }
 }
 
-.navbar .nav > li > a:hover {
-  color: $tertiary-color;
+.control-group {
+  &.info {
+    textarea {
+      border-color: $secondary-color;
+      color: $secondary-color;
+    }
+
+    input {
+      &[type='text'],
+      &[type='password'],
+      &[type='datetime'],
+      &[type='datetime-local'],
+      &[type='date'],
+      &[type='month'],
+      &[type='time'],
+      &[type='week'],
+      &[type='number'],
+      &[type='email'],
+      &[type='url'],
+      &[type='search'],
+      &[type='tel'],
+      &[type='color'] {
+        border-color: $secondary-color;
+        color: $secondary-color;
+      }
+    }
+
+    &.uneditable-input {
+      border-color: $secondary-color;
+      color: $secondary-color;
+    }
+  }
 }
 
-.navbar .nav > li > a {
-  padding: 15px 15px 17px;
-  border-radius: 5px;
-  -moz-border-radius: 5px;
-}
-
-.navbar .nav ul li {
-  background-color: $bg-color;
-}
-
-.navbar .nav ul li.active > a, .navbar .nav ul li.active > a:hover {
-  background-color: $tertiary-color;
-}
-
-.navbar .nav ul a:hover {
-  background-color: $tertiary-color;
-}
-
-.navbar-inverse .navbar-inner {
-  background: $navbar-color;
-}
-
-.navbar-inverse .nav > li > a {
-  color: $button-text-color;
-  background-color: $button-background-color;
-}
-
-.navbar-inverse .nav .active > a {
-  color: $button-text-color;
-  background-color: $button-background-color;
-}
-
-.navbar-inverse .nav .active > a:hover,
-.navbar-inverse .nav .active > a:focus {
-  background-color: $button-active-background-color;
-  color: $button-active-text-color;
-}
-
-.navbar-inverse .navbar-toggle {
-  padding-top: 0px;
-  background-color: $button-active-background-color;
-}
-
-.navbar-inverse .navbar-toggle:before {
-  color: $button-active-text-color;
-}
-
-.navbar-inverse .navbar-toggle,
-.navbar-inverse .navbar-toggle {
-  color: $button-active-text-color;
-}
-
-.navbar-inverse .navbar-toggle:hover:before,
-.navbar-inverse .navbar-toggle:focus:before {
-  color: $button-active-text-color;
-}
-
-.navbar-inverse .navbar-toggle:hover,
-.navbar-inverse .navbar-toggle:focus {
-  color: $button-active-text-color;
-}
-
-.control-group.info textarea, .control-group.info
-input[type="text"], .control-group.info
-input[type="password"], .control-group.info
-input[type="datetime"], .control-group.info
-input[type="datetime-local"], .control-group.info
-input[type="date"], .control-group.info
-input[type="month"], .control-group.info
-input[type="time"], .control-group.info
-input[type="week"], .control-group.info
-input[type="number"], .control-group.info
-input[type="email"], .control-group.info
-input[type="url"], .control-group.info
-input[type="search"], .control-group.info
-input[type="tel"], .control-group.info
-input[type="color"], .control-group.info
-.uneditable-input {
-  border-color: $secondary-color;
-  color: $secondary-color;
-}
-
-.checkbox:hover,
-.radio:hover {
-  color: $tertiary-color;
+.checkbox,
+.radio {
+  &:hover {
+    color: $tertiary-color;
+  }
 }
 
 .toggle {
   background-color: $bg-color;
+
+  .toggle-radio {
+    color: $tertiary-color;
+  }
 }
 
-.toggle .toggle-radio {
-  color: $tertiary-color;
+.tagsinput {
+  .tag {
+    background: $tertiary-color;
+  }
+
+  input {
+    color: $bg-color;
+  }
 }
 
-.tagsinput .tag {
-  background: $tertiary-color;
+.tagsinput-add {
+  &:hover {
+    background-color: $tertiary-color;
+  }
 }
 
-.tagsinput input {
-  color: $bg-color;
-}
 
-.tagsinput-add:hover {
-  background-color: $tertiary-color;
-}
+.progress,
+.ui-slider {
+  .bar {
+    background: $tertiary-color;
+  }
 
-.progress .bar, .ui-slider .bar {
-  background: $tertiary-color;
-}
-
-.progress .bar-info, .ui-slider .bar-info {
-  background-color: $secondary-color;
+  .bar-info {
+    background-color: $secondary-color;
+  }
 }
 
 .ui-slider-range {
@@ -164,26 +237,30 @@ input[type="color"], .control-group.info
   background-color: $bg-color;
 }
 
-.pagination ul > li > a:hover, .pagination ul > li > a :focus,
-.pagination ul > li > span:hover, .pagination ul > li > span :focus {
-  background-color: $tertiary-color;
-  border-color: $tertiary-color;
+.pagination {
+  ul {
+    & > li {
+      & > a,
+      & > span {
+        &:focus,
+        &:hover {
+          background-color: $tertiary-color;
+          border-color: $tertiary-color;
+        }
+      }
+    }
+  }
 }
 
-.tooltip.top .tooltip-arrow {
-  border-top-color: $bg-color;
-}
-
-.tooltip.right .tooltip-arrow {
-  border-right-color: $bg-color;
-}
-
-.tooltip.bottom .tooltip-arrow {
-  border-bottom-color: $bg-color;
-}
-
-.tooltip.left .tooltip-arrow {
-  border-right-color: $bg-color;
+.tooltip {
+  &.top,
+  &.right,
+  &.bottom,
+  &.left {
+    .tooltip-arrow {
+      border-top-color: $bg-color;
+    }
+  }
 }
 
 .tooltip-inner {
@@ -211,42 +288,42 @@ input[type="color"], .control-group.info
   background-color: $text-color;
 }
 
-.palette-paragraph span {
-  color: $text-color;
+.palette-paragraph {
+  span {
+    color: $text-color;
+  }
 }
 
-.todo li {
-  background: $bg-color url(image_path("todo/todo.png")) 92% center no-repeat;
-}
+.todo {
+  li {
+    background: $bg-color url(image_path('todo/todo.png')) 92% center no-repeat;
 
-.todo li.todo-done {
-  background: transparent url(image_path("todo/done.png")) 92% center no-repeat;
-  color: $tertiary-color;
-}
+    &.todo-done {
+      background: transparent url(image_path('todo/done.png'))
+      92% center no-repeat;
+      color: $tertiary-color;
 
-.todo li.todo-done .todo-name {
-  color: $tertiary-color;
+      .todo-name {
+        color: $tertiary-color;
+      }
+    }
+  }
 }
 
 .todo-search {
-  background: $tertiary-color url(image_path("todo/search.png")) 92% center no-repeat;
+  background: $tertiary-color url(image_path('todo/search.png')) 92%
+  center no-repeat;
   color: $bg-color;
 }
 
-input.todo-search-field {
-  color: $bg-color;
-}
+input {
+  &.todo-search-field {
+    color: $bg-color;
 
-input.todo-search-field:-moz-placeholder {
-  color: $bg-color;
-}
-
-input.todo-search-field::-webkit-input-placeholder {
-  color: $bg-color;
-}
-
-input.todo-search-field.placeholder {
-  color: $bg-color;
+    &.placeholder {
+      color: $bg-color;
+    }
+  }
 }
 
 .footer-banner {
@@ -265,8 +342,12 @@ input.todo-search-field.placeholder {
   background-color: $tertiary-color;
 }
 
-.login-form .login-field:focus + .login-field-icon {
-  color: $tertiary-color;
+.login-form {
+  .login-field {
+    &:focus + .login-field-icon {
+      color: $tertiary-color;
+    }
+  }
 }
 
 .jumbotron {
@@ -274,35 +355,27 @@ input.todo-search-field.placeholder {
 }
 
 .badge {
-  padding: 4px 4px;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 300;
-  color: $accent-color3;
   background-color: $secondary-color;
+  color: $accent-color3;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 20px;
+  padding: 4px;
 }
 
 .border-top {
   border-top: 1px solid $primary-color;
 }
 
-.navbar-inverse .nav > li > a:hover,
-.navbar-inverse .nav > li > a:focus,
-.navbar-inverse .dropdown-menu a:hover,
-.navbar-inverse .dropdown-menu a:focus {
-  color: $button-active-text-color;
-  background-color: $button-active-background-color;
-}
+a {
+  & > .badge {
+    color: $accent-color3;
+  }
 
-a > .badge {
-  color: $accent-color3;
-}
-
-a:hover > .badge {
-  color: $tertiary-color;
-  background-color: $accent-color1;
-}
-
-.navbar .nav > li:hover > ul {
-  top: 100%;
+  &:hover {
+    & > .badge {
+      background-color: $accent-color1;
+      color: $tertiary-color;
+    }
+  }
 }
