Fixed typo in blog post

--- a/source/blog_posts/2015-01-21-why-i-always-hit-the-crosswalk-button.html.markdown.erb
+++ b/source/blog_posts/2015-01-21-why-i-always-hit-the-crosswalk-button.html.markdown.erb
@@ -7,7 +7,7 @@ keywords: "Volunteer's Dilemma, Kitty Genovese, game theory, Nash Equilibrium, s
 description: An examination of Kitty Genovese and the Volunteer's Dilemma, with applications
 ---
 
-There's a major crosswalk bisecting one of the busiest street in Chicago; I stop there on a near daily basis as said crosswalk also leads to the best running trail downtown. On sunny weekends, crowds grow fifty pedestrians large before the light turns red, alleviating the congestion. It's a great place to people watch, especially if you're interested in crowd dynamics or game theory. The size of the crowd aside, a few things make this particular crosswalk special:
+There's a major crosswalk bisecting one of the busiest streets in Chicago; I stop there on a near daily basis as said crosswalk also leads to the best running trail downtown. On sunny weekends, crowds grow fifty pedestrians large before the light turns red, alleviating the congestion. It's a great place to people watch, especially if you're interested in crowd dynamics or game theory. The size of the crowd aside, a few things make this particular crosswalk special:
 
 - Cross traffic is sparse, and in the absence of a car, the light will never turn without a pedestrian hitting the walk button.
 - The crowds are large enough to form human traffic jams at times. When this happens, there's ambiguity as to who arrived first, and who should hit the button.
